examples/test/testpolicy10403.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10403
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key34: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
      podSelector:
        matchLabels:
          key44: value43
          key43: value39
          key3: value35
